@@ -1,7 +1,16 @@
 [Gallery2Mgr]
-requiresAuth= false
-embedURI    = seagull/www/index.php/gallery2/action/list/
-embedPath   = /
-relativeG2Path  = seagull/www/gallery2
-galleryDir  = /var/www/html/seagull/www/gallery2
-loginPage   = http://localhost/seagull/www/index.php/user/login/
+requiresAuth  = false
+
+; g2dir: physical location of your Gallery2 directory on disk.
+g2Dir         = /var/www/seagull/www/gallery2
+
+; embedUri: SGL URL to Gallery2 module, relative to SGL web root.
+embedUri      = /index.php/gallery2/action/list/
+
+; g2Uri: actual URL of Gallery2 dir relative to host root.
+; (e.g. http://seagull.yourhost.com/ points to /var/www/seagull/www)
+g2Uri         = /gallery2/
+
+; SGL page users will be redirected to should they try to view something
+; for which they don't have permissions.
+loginRedirect = /index.php/user/login/
